--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,27 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Spec Auto Sosnowiec | Mechanika & Pomoc Drogowa 24/7</title>
+    <title>Spec Auto Sosnowiec - Mechanika & Pomoc Drogowa 24/7</title>
     <meta
       name="description"
-      content="Spec Auto Sosnowiec - mechanika samochodowa, pomoc drogowa 24/7, diagnostyka i serwis w Sosnowcu i okolicach. Zadzwoń: 512-722-296"
+      content="Spec Auto Sosnowiec - mechanika pojazdowa, diagnostyka, serwis i pomoc drogowa 24/7. Zaufaj lokalnym specjalistom w Sosnowcu."
     />
-
+    <meta name="author" content="Spec Auto Sosnowiec" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SpecAutoSosnowiec</title>
-  </head>
+    <meta
+      property="og:title"
+      content="Spec Auto Sosnowiec - Mechanika, Serwis, Diagnostyka i Pomoc Drogowa"/>
+    <meta
+      property="og:description"
+      content="Naprawy, diagnostyka i pomoc drogowa 24/7 w Sosnowcu."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="https://specauto-sosnowiec.pl" />
+    <meta property="og:type" content="website" />
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
